Minimal changes for OpenJDK 11
Update to Java 11. This currently loses all the packaging stuff.